# RTA

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  Add_functions.py  CHANGELOG.rst  CITATION.cff  Note_transmission_31_05_22.txt  Notebook_sego_rhea.ipynb  READ ME.txt  README.md  RHEA_studies.ipynb  Takeoff_perfo-TPAD.ipynb  Uncertainty_study_new2.ipynb  main.py  pip_freeze.txt  previous_RTO.csv  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: TPAD_H2burn.xml  TPAD_baseline.xml  TPAD_baseline_inputs.xml  TPAD_batteries.xml  TPAD_elec.xml  TPAD_hybrid.xml  TPAD_hybrid_uncertainty.xml
main/: main.py
main/data/: ATR72.xml
main/workdir/: flight_points.csv  n2.html  oad_process.yml  problem_inputs.xml  problem_outputs_AbstractFuelC_FAST.xml  problem_outputs_RHEA_Prop_Wei_Geo.xml
main/workdir/Mission/: sizing_mission_R.yml
notebooks/: 01_tutorial.ipynb  02_postprocessing.ipynb  TPAD_baseline.ipynb
postproc/: TPAD_H2burn_notebook.ipynb  TPAD_hybrid_notebook.ipynb
rhea/base/: flight_point.py
rhea/models/: register.py
rhea/models/aerodynamics/: __init__.py  aerodynamics_high_speed_RHEA.py  aerodynamics_low_speed_RHEA.py  aerodynamics_takeoff_RHEA.py  constants.py
rhea/models/aerodynamics/components/: OEI_effect.py  cd0_fuselage.py  cd0_nacelle_pylons_TP.py  cd0_total.py  cd0_wing.py  compute_low_speed_aero.py  compute_polar.py  high_lift_aero.py  initialize_cl.py  initialize_in.py  lg_effect.py  oswald.py
rhea/models/geometry/: __init__.py  geometry_RHEA2.py  geometry_RHEA_IN.py  geometry_RHEA_sizing.py  geometry_RHEA_wing_IN.py
rhea/models/geometry/geom_components/: __init__.py  compute_geom_RHEA.py
rhea/models/loops/: compute_engine_size.py  compute_wing_area_RHEA.py  compute_wing_position.py
rhea/models/performances/: __init__.py
rhea/models/performances/mission/: base.py  complete_mission_outputs.py
rhea/models/propulsion/fuel_engine/: complete_propulsion_inputs.py  constants.py
rhea/models/weight/: weight_RHEA_IN.py  weight_RHEA_sizing.py  weight_RHEA_sizing_OAD.py
rhea/models/weight/cg/: cg.py  cg_RHEA.py  (+1 more)
rhea/notebooks/: 01_tutorial.ipynb  02_postprocessing.ipynb
rhea/notebooks/workdir/: oad_process.yml
rhea/resources/gasturbine/: testing_metamodel.py
rhea/utils/Stand_alone_tools/: FR_ML.ipynb  Gas-turbine-L0.ipynb  Gas-turbine-L1.ipynb  Propeller_ADT.ipynb  TPAD_baseline_inputs.xml  fuel_cell_study.ipynb
rhea/utils/postprocessing/: Sankey plot.ipynb  analysis_and_plots_RHEA.py
rhea/utils/widgets/: widgets_functions.py
rta/models/aerodynamics/: aerodynamics_high_speed_RHEA.py  aerodynamics_low_speed_RHEA.py  aerodynamics_takeoff_RHEA.py  aerodynamics_takeoff_RTA.py
rta/models/geometry/: __init__.py  geometry_RHEA2.py  geometry_RHEA_IN.py  geometry_RHEA_sizing.py  geometry_RHEA_wing_IN.py
rta/models/loops/: compute_engine_size.py  compute_wing_area_RHEA.py  compute_wing_position.py
rta/models/weight/: weight_RHEA_IN.py  weight_RHEA_sizing.py  weight_RHEA_sizing_OAD.py
rta/notebooks/: 01_tutorial.ipynb
rta/notebooks/data/: problem_inputs_baseline.xml
rta/notebooks/workdir/: oad_process.yml  problem_inputs.xml  problem_outputs.xml
rta/utils/postprocessing/: analysis_and_plots_RHEA.py
src/rta/configurations/: oad_process.yml
src/rta/models/: variable_descriptions.txt
src/rta/notebooks/: 01_tutorial.ipynb  02_postprocessing.ipynb
test/: test_rhea_baseline_integration.py
test/data/: flight_points.csv  oad_process.yml  oad_sizing.toml  problem_outputs.xml
tests/: test_rta_baseline_integration.py
tests/data/: oad_process.yml  oad_sizing.toml  problem_inputs.xml
workdir/: Competition_sizing.toml  RHEA_TPAD_DOC_mission.toml  RHEA_TPAD_DOC_mission_H2TP.toml  RHEA_TPAD_sizing_FHFC.toml  RHEA_TPAD_sizing_FHFC_OAD.toml  RHEA_TPAD_sizing_H2TP.toml  RHEA_TPAD_sizing_H2TP_OAD.toml  RHEA_TPAD_sizing_PHEB.toml  RHEA_TPAD_sizing_PHFC.toml  RHEA_TPAD_sizing_PHFC_new.toml  TPAD_sizing.toml  TPAD_takeoff.toml  oad_sizing.toml  test_geom.toml
workdir/TPAD_H2burn_test_/sizing/: flight_points.csv  flight_points_OEI.csv  n2.html  sizing_inputs_mda.xml  sizing_outputs_mda.xml
workdir/TPAD_baseline_ref_L1/: sizingflight_point_NOx.csv
workdir/TPAD_baseline_ref_L1/sizing/: flight_points.csv  flight_points_OEI.csv  flight_points_thermo.csv  n2.html  sizing_inputs_mda.xml
workdir/TPAD_baseline_ref_ML_L1/DOC/: DOC_flight_points.csv  RHEA_TPAD_DOC_mission.toml  problem_outputs.xml
workdir/TPAD_baseline_ref_ML_L1/TO/: TPAD_takeoff.toml  problem_inputs.xml  problem_outputs.xml
workdir/TPAD_baseline_ref_ML_L1/data/: problem_inputs.xml  problem_outputs.xml
workdir/TPAD_baseline_ref_ML_L1/sizing/: TO_flight_points.csv  TPAD_sizing.toml  flight_points.csv  n2.html
workdir/TPAD_baseline_test_L0/sizing/: flight_points.csv  flight_points_OEI.csv  n2.html  sizing_inputs_mda.xml  sizing_outputs_mda.xml
workdir/TPAD_baseline_tutorial/sizing/: flight_points.csv  oad_sizing.toml
workdir/TPAD_baseline_tutorial_1/sizing/: flight_points.csv  problem_outputs.xml
workdir/TPAD_baseline_tutorial_3/sizing/: oad_sizing.toml  problem_inputs.xml
workdir/TPAD_baseline_tutorial_4/sizing/: flight_points.csv  oad_sizing.toml
workdir/TPAD_baseline_tutorial_to/sizing/: flight_points.csv  oad_sizing.toml  problem_outputs.xml
workdir/TPAD_elec_test_FH/sizing/: flight_points.csv  flight_points_OEI.csv  n2.html  sizing_inputs_mda.xml  sizing_outputs_mda.xml
workdir/TPAD_hybrid_Pelec_1100_kw_Pgt_1000KW_TPrate_0.4/sizing/: RHEA_TPAD_sizing_PHFC.toml  flight_points.csv  flight_points_thermo.csv  problem_inputs.xml  problem_outputs.xml  sizing_conditions.csv
workdir/Test_1/sizing/: oad_sizing.toml
workdir/test_2/sizing/: oad_sizing.toml
workdir/test_3/sizing/: oad_sizing.toml
workdir/test_4/sizing/: oad_sizing.toml
workdir/test_5/sizing/: oad_sizing.toml
workdir/test_dir/: oad_process.yml  oad_sizing_with_perfo_TO.toml  oad_sizing_without_TO.toml  problem_inputs.xml  problem_inputs_TO.xml  problem_inputs_data.xml  problem_outputs.xml  problem_outputs_TO.xml
workdir/test_dir/Mission/: sizing_mission_R.yml
(+567 files in other folders)
