[tool.poetry]
name = "RTA"
version = "0.0.1"
description = "Conceptual aircraft design platform for conventional 80 seat aircraft"
authors = ["Vincenzo PALLADINO <VINCENZO.PALLADINO@atr-aircraft.com>",
    "Eric Nguyen Van <eric.nguyen_van@onera.fr"]
packages = [
    { include = "rta" },
]
[tool.poetry.dependencies]
# IMPORTANT: when modifying this list, docs/requirements.txt must be updated for
# ReadTheDocs to be able to compile the documentation.
# A pre-commit hook has been added to do this task. As a result, any modification
# of poetry.lock file will modify docs/requirements.txt and make
# the commit fail because "files were modified by this hook". In that case,
# doing again the commit including changes in docs/requirements.txt will succeed.
python = ">=3.9, <3.12"
fast-oad = "^1.8.0"
fast-oad-cs25 = "^0.7.2"
openmdao = "^3.33.0"
pytest = "^8.0"
black = "22.3.0"
jupyterlab = [
    { version = "^3.4.7", python = "<3.12" },
    { version = "^4.2", python = "^3.12" }
]

[tool.poetry.plugins."fastoad.plugins"]
"rta" = "rta"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--verbose"
testpaths = ['rta']
norecursedirs = ["dist", "build", ".ipynb_checkpoints"]