#==============================================================================
[tool.poetry]
name = "RTA"
version = "0.0.1"
description = "Conceptual aircraft design platform for conventional 80 seat aircraft"
authors = ["Vincenzo PALLADINO",
    "Eric Nguyen Van <eric.nguyen_van@onera.fr"]
packages = [
    { include = "rta", from = "src" },
]
exclude = ["**/tests/**"]

homepage = "https://github.com/fast-aircraft-design/RTA"
keywords = [
    "aircraft",
    "design",
    "multi-disciplinary",
    "Regional Turboprop Aircraft"
]
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics"
]

#------------------------------------------------------------------------------
[tool.poetry.dependencies]
# Dependencies that users of the plugin will need.
# Dependency groups below will apply only for developers of this project
python = ">=3.9, <3.12"
fast-oad-core = "^1.8.0"
fast-oad-cs25 = "^0.7.2"

[tool.poetry.group.dev.dependencies]
# Dependencies that may be used during development process (validation,...) but not needed
# by end users.
matplotlib = "^3.9.2"

[tool.poetry.group.test.dependencies]
# Dependencies for test suite
pytest = "^8.0"
pytest-cov = "^5.0"
coverage = { extras = ["toml"], version = "*" }
nbval = ">=0.11, <1.0"

[tool.poetry.group.lint.dependencies]
# Dependencies for "quality control"
pre-commit = "^3"
ruff = "0.6.4"

#------------------------------------------------------------------------------
[tool.poetry.plugins."fastoad.plugins"]
"rta" = "rta"

#==============================================================================
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#==============================================================================
[tool.ruff]
line-length = 100
target-version = "py39"
extend-include = ["*.ipynb"]
exclude = ["tests/dummy_plugins/"]

#------------------------------------------------------------------------------
[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

#==============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov-report term-missing --cov-report html --verbose"
testpaths = ["rta"]
norecursedirs = ["dist", "build", ".tox", ".ipynb_checkpoints"]
filterwarnings = ["default"]

#------------------------------------------------------------------------------
[tool.coverage.run]
branch = true
omit = ["*/test/*", "*/tests/*"]
[tool.coverage.paths]
source = ["src/"]
[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ = = .__main__.:"
]


